--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "[rust]": {
     "editor.defaultFormatter": "rust-lang.rust-analyzer"
   },
-  "rust-analyzer.cargo.buildScripts.overrideCommand": null
+  "rust-analyzer.cargo.buildScripts.overrideCommand": null,
+  "rust-analyzer.highlightRelated.exitPoints.enable": true
 }
